# DynASM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
minilua/: CMakeLists.txt
src/: dasm_arm64.h  dasm_armv7a.h  dasm_armv7a.lua  dasm_armv7m.h  dasm_armv7m.lua  dasm_mips.h  dasm_ppc.h  dasm_proto.h  dasm_x86.h  ins.txt  wot.txt
test/: test.dasc
tools/: gencode.py  instructions.txt  neon-instructions.txt
tools/armv7a/: neon-instructions.txt
